Fixed container for banner
Fixed container for overlap banner in each page

--- a/css/css.css
+++ b/css/css.css
@@ -256,7 +256,7 @@ li .img-responsive
 
 body#home a.about, body#experience a.experience, body#work a.work
 {
-    color:yellow;
+    border-bottom: 3px solid #16A5A1;
 }
 .footer
 {
@@ -319,8 +319,16 @@ body#home a.about, body#experience a.experience, body#work a.work
  
     background-color: #e2dede ;   
     height: auto;
+    margin-top: -100px;
 }
 
+
+.content-background-expertise
+{
+    background-color: #e2dede ;   
+    height: auto;
+    margin-top: 0px;
+}
 
 .col-yellow
 {
@@ -688,7 +696,7 @@ tr td
     display: block;
     position: relative;  
     
-    top:-80px;
+    top:-120px;
     width: 10%;
      margin: 0 auto;
 }
